--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -2,4 +2,8 @@ public with sharing class HelloWorld {
     public HelloWorld() {
 
     }
+
+    public static void sayHello(){
+        System.debug('HelloWorld!');
+    }
 }
