--- a/force-app/main/default/classes/HelloWorld.cls
+++ b/force-app/main/default/classes/HelloWorld.cls
@@ -6,4 +6,8 @@ public with sharing class HelloWorld {
     public static void sayHello(){
         System.debug('HelloWorld !');
     }
+
+    public static void greet(String name){
+        System.debug('Hello, ' + name);
+    }
 }
